lots of minor style changes

--- a/www/ui/milestone10x_screens/2-1-0-1.html
+++ b/www/ui/milestone10x_screens/2-1-0-1.html
@@ -33,9 +33,9 @@
 	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr>
-<td id="leftcol" nowrap="nowrap" width="20%">
+<table border="0" cellspacing="12" cellpadding="0" width="97%">
+ <tr valign="top">
+<td id="leftcol" width="20%">
 <!-- Structural Elements -->
 	
 	<!-- SourceCast -->
@@ -114,7 +114,7 @@
 	
 <!-- Structural Elements -->
 </td>
-<td id="bodycol">
+<td width="100%" id="bodycol">
 <!-- Structural Elements -->
 
 	<!-- Scarab - App -->
@@ -152,17 +152,17 @@
 		<div class="axial">
 			<table border="1" cellspacing="2" cellpadding="3">
 			<tr>
-			<th>template name:</th>
+			<th>template name</th>
 			<td><input type="text" size="25" value="" /></td>
 			</tr>
 			
 			<tr>
-			<th>template descr:</th>
+			<th>template descr</th>
 			<td><textarea rows="4" cols="40"></textarea></td>
 			</tr>
 			
 			<tr>
-			<th>template author:</th>
+			<th>template author</th>
 			<td><div>Joe Smo</div>
 			<a href="#">joes@users.com</a></td>
 			</tr>
@@ -187,12 +187,12 @@
 		<div class="axial">
 			<table width="100%" cellspacing="2" cellpadding="3" border="1">
 			<tr>
-			<th width="120">issue summary:</th>
+			<th width="120">issue summary</th>
 			<td><input type="text" value="" size="" /></td>
 			</tr>
 		
 			<tr>
-			<th width="120">version:</th>
+			<th width="120">version</th>
 			<td><select>
 			<option>
 			choice 1
@@ -207,7 +207,7 @@
 			</tr>
 	
 			<tr>
-			<th width="120">platform:</th>
+			<th width="120">platform</th>
 			<td><select>
 			<option>
 			choice 1
@@ -222,7 +222,7 @@
 			</tr>
 	
 			<tr>
-			<th width="120">os:</th>
+			<th width="120">os</th>
 			<td><select>
 			<option>
 			choice 1
@@ -237,7 +237,7 @@
 			</tr>
 	
 			<tr>
-			<th width="120">found during:</th>
+			<th width="120">found during</th>
 			<td><select>
 			<option>
 			choice 1
@@ -252,7 +252,7 @@
 			</tr>
 	
 			<tr>
-			<th width="120">issue type:</th>
+			<th width="120">issue type</th>
 			<td><select>
 			<option>
 			choice 1
@@ -267,12 +267,12 @@
 			</tr>
 	
 			<tr>
-			<th width="120">functional area:</th>
+			<th width="120">functional area</th>
 			<td><input type="checkbox" /> UI <input type="checkbox" />setup <input type="checkbox" />help</td>
 			</tr>
 	
 			<tr>
-			<th width="120">severity:</th>
+			<th width="120">severity</th>
 			<td><select>
 			<option>
 			choice 1
@@ -287,7 +287,7 @@
 			</tr>
 	
 			<tr>
-			<th width="120">priority:</th>
+			<th width="120">priority</th>
 			<td><select>
 			<option>
 			choice 1
