--- a/www/ui/milestone1x_screens/2-1-0.html
+++ b/www/ui/milestone1x_screens/2-1-0.html
@@ -33,9 +33,9 @@
 	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr>
-<td id="leftcol" nowrap="nowrap" width="20%">
+<table border="0" cellspacing="12" cellpadding="0" width="97%">
+ <tr valign="top">
+<td id="leftcol" width="20%">
 <!-- Structural Elements -->
 	
 	<!-- SourceCast -->
@@ -78,7 +78,7 @@
 	
 <!-- Structural Elements -->
 </td>
-<td id="bodycol">
+<td width="100%" id="bodycol">
 <!-- Structural Elements -->
 	
 	<!-- Scarab - App -->
@@ -124,7 +124,7 @@
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
 			<tr>
-			<th width="120">templates:</th>
+			<th width="120">templates</th>
 			
 			<td><select>
 			<option>
@@ -151,12 +151,12 @@
 		<div class="axial">
 			<table width="100%" cellspacing="2" cellpadding="3" border="1">
 			<tr>
-			<th width="120">issue summary:</th>
+			<th width="120">issue summary</th>
 			<td><input type="text" value="" size="" /></td>
 			</tr>
 		
 			<tr>
-			<th width="120">version:</th>
+			<th width="120">version</th>
 			<td><select>
 			<option>
 			choice 1
@@ -171,7 +171,7 @@
 			</tr>
 	
 			<tr>
-			<th width="120">platform:</th>
+			<th width="120">platform</th>
 			<td><select>
 			<option>
 			choice 1
@@ -186,7 +186,7 @@
 			</tr>
 	
 			<tr>
-			<th width="120">os:</th>
+			<th width="120">os</th>
 			<td><select>
 			<option>
 			choice 1
@@ -201,7 +201,7 @@
 			</tr>
 	
 			<tr>
-			<th width="120">found during:</th>
+			<th width="120">found during</th>
 			<td><select>
 			<option>
 			choice 1
@@ -216,7 +216,7 @@
 			</tr>
 	
 			<tr>
-			<th width="120">issue type:</th>
+			<th width="120">issue type</th>
 			<td><select>
 			<option>
 			choice 1
@@ -231,12 +231,12 @@
 			</tr>
 	
 			<tr>
-			<th width="120">functional area:</th>
+			<th width="120">functional area</th>
 			<td><input type="checkbox" /> UI <input type="checkbox" />setup <input type="checkbox" />help</td>
 			</tr>
 	
 			<tr>
-			<th width="120">severity:</th>
+			<th width="120">severity</th>
 			<td><select>
 			<option>
 			choice 1
@@ -251,7 +251,7 @@
 			</tr>
 	
 			<tr>
-			<th width="120">priority:</th>
+			<th width="120">priority</th>
 			<td><select>
 			<option>
 			choice 1
