--- a/www/ui/milestone1x_screens/2-1-1.html
+++ b/www/ui/milestone1x_screens/2-1-1.html
@@ -33,9 +33,9 @@
 	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr>
-<td id="leftcol" nowrap="nowrap" width="20%">
+<table border="0" cellspacing="12" cellpadding="0" width="97%">
+ <tr valign="top">
+<td id="leftcol" width="20%">
 <!-- Structural Elements -->
 	
 	<!-- SourceCast -->
@@ -114,7 +114,7 @@
 	
 <!-- Structural Elements -->
 </td>
-<td id="bodycol">
+<td width="100%" id="bodycol">
 <!-- Structural Elements -->
 	
 	<!-- Scarab - App -->
@@ -184,14 +184,14 @@
 		<table width="100%" cellpadding="3" cellspacing="2" border="1">
 		<tr>
 		<th nowrap="nowrap"><a href="#"><img src="../csi/images/icon_uparrow_off.gif" width="13" height="8" alt="sort ascending" border="0" /></a><img src="../csi/images/icon_downarrow_on.gif" width="13" height="8" alt="sort descending" border="0" /></th>
-		<th><a href="#" title="sort">issue ID #:</a></th>
-		<th><a href="#" title="sort">issue summary:</a></th>
-		<th><a href="#" title="sort">platform:</a></th>
-		<th><a href="#" title="sort">os:</a></th>
-		<th><a href="#" title="sort">issue type:</a></th>
-		<th><a href="#" title="sort">severity:</a></th>
-		<th><a href="#" title="sort">creation date:</a></th>
-		<th><a href="#" title="sort">date closed:</a></th>
+		<th><a href="#" title="sort">issue ID #</a></th>
+		<th><a href="#" title="sort">issue summary</a></th>
+		<th><a href="#" title="sort">platform</a></th>
+		<th><a href="#" title="sort">os</a></th>
+		<th><a href="#" title="sort">issue type</a></th>
+		<th><a href="#" title="sort">severity</a></th>
+		<th><a href="#" title="sort">creation date</a></th>
+		<th><a href="#" title="sort">date closed</a></th>
 		</tr>
 		
 		<tr class="a">
@@ -246,7 +246,7 @@
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
 			<tr>
-			<th width="120">note:</th>
+			<th width="120">note</th>
 			<td>
 			<textarea rows="4" cols="40">
 			</textarea> 
