--- a/www/ui/milestone2x_screens/2-2-0-x.html
+++ b/www/ui/milestone2x_screens/2-2-0-x.html
@@ -33,9 +33,9 @@
 	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr>
-<td id="leftcol" nowrap="nowrap" width="20%">
+<table border="0" cellspacing="12" cellpadding="0" width="97%">
+ <tr valign="top">
+<td id="leftcol" width="20%">
 <!-- Structural Elements -->
 	
 	<!-- SourceCast -->
@@ -114,7 +114,7 @@
 	
 <!-- Structural Elements -->
 </td>
-<td id="bodycol">
+<td width="100%" id="bodycol">
 <!-- Structural Elements -->
 
 	<!-- Scarab - App -->
@@ -160,7 +160,7 @@
 <div class="axial">
 <table border="1" cellspacing="2" cellpadding="3">
 <tr>
-<th width="120">select text attributes:</th>
+<th width="120">select text attributes</th>
 
 <td><textarea rows="10" cols="30">
 summary
@@ -171,7 +171,7 @@ URL
 </tr>
 
 <tr>
-<th width="120">enter search string:</th>		
+<th width="120">enter search string</th>		
 <td><textarea rows="2" cols="30"></textarea></td>
 </tr>
 </table>
@@ -182,7 +182,7 @@ URL
 		<div class="axial">
 			<table width="100%" border="1" cellspacing="2" cellpadding="3">
 			<tr>
-			<th width="120">severity:</th>
+			<th width="120">severity</th>
 			
 			<td><select>
 			<option>select</option>
@@ -192,7 +192,7 @@ URL
 			</tr>
 			
 			<tr>
-			<th width="120">priority:</th>		
+			<th width="120">priority</th>		
 			<td><select>
 			<option>select</option>
 			<option>p1</option>
