--- a/www/ui/milestone2x_screens/2-2-0_alt.html
+++ b/www/ui/milestone2x_screens/2-2-0_alt.html
@@ -33,9 +33,9 @@
 	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr>
-<td id="leftcol" nowrap="nowrap" width="20%">
+<table border="0" cellspacing="12" cellpadding="0" width="97%">
+ <tr valign="top">
+<td id="leftcol" width="20%">
 <!-- Structural Elements -->
 	
 	<!-- SourceCast -->
@@ -114,7 +114,7 @@
 	
 <!-- Structural Elements -->
 </td>
-<td id="bodycol">
+<td width="100%" id="bodycol">
 <!-- Structural Elements -->
 
 	<!-- Scarab - App -->
@@ -159,7 +159,7 @@
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
 			<tr>
-			<th width="120">saved queries:</th>	
+			<th width="120">saved queries</th>	
 			<td><select>
 			<option>
 			Saved query X
@@ -457,7 +457,7 @@
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
 			<tr>
-			<th width="120">committed by:</th>
+			<th width="120">committed by</th>
 			<td><select multiple="multiple">
 			<option>role X</option>
 			<option>role Y</option>
@@ -470,7 +470,7 @@
 			
 			<tr>
 
-			<th width="120">assignee(s):</th>
+			<th width="120">assignee(s)</th>
 			<td><select multiple="multiple">
 			<option>role X</option>
 			<option>role Y</option>
@@ -548,7 +548,7 @@
         </tr>  
         
         <tr>
-         <th width="120">date range:</th>
+         <th width="120">date range</th>
 
          <td><dl><div>from:</div>
 
@@ -717,7 +717,7 @@
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
 			<tr>
-			<th width="120">sort by:</th>
+			<th width="120">sort by</th>
 			<td><select>
 			<option>
 			attriute X
@@ -738,7 +738,7 @@
 			</select></td>
 			</tr>
 			<tr>
-			<th width="120">issues per page:</th>
+			<th width="120">issues per page</th>
 			<td><input type="radio" name="foo" /> 25 <input type="radio" name="foo" /> 50 <input type="radio" name="foo" /> 75 <input type="radio" name="foo" /> 100</td>
 			</tr>
 			</table>
