--- a/www/ui/milestone5x_screens/3-5-1.html
+++ b/www/ui/milestone5x_screens/3-5-1.html
@@ -33,9 +33,9 @@
 	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr>
-<td id="leftcol" nowrap="nowrap" width="20%">
+<table border="0" cellspacing="12" cellpadding="0" width="97%">
+ <tr valign="top">
+<td id="leftcol" width="20%">
 <!-- Structural Elements -->
 	
 	<!-- SourceCast -->
@@ -114,7 +114,7 @@
 	
 <!-- Structural Elements -->
 </td>
-<td id="bodycol">
+<td width="100%" id="bodycol">
 <!-- Structural Elements -->
 
 	<!-- Scarab - App -->
@@ -175,18 +175,18 @@
 		<div class="axial">
 			<table width="100%" border="1" cellspacing="2" cellpadding="3">
 			<tr>
-			<th width="120">subject:</th>
+			<th width="120">subject</th>
 			<td><input type="text" size="25" value="" /></td>
 			</tr>
 			
 			<tr>
-			<th width="120">email body:</th>
+			<th width="120">email body</th>
 			<td><textarea rows="4" cols="40">
 			</textarea></td>
 			</tr>
 			
 			<tr>
-			<th width="120">author:</th>
+			<th width="120">author</th>
 			<td>
 			<div>Joe Smo</div>
 			<a href="#">joes@users.com</a></td>
@@ -203,10 +203,10 @@
 		
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
-		<th><input type="radio" name="sort by" />&nbsp;attribute A:</th>
-		<th><input type="radio" name="sort by" />&nbsp;attribute b:</th>
-		<th><input type="radio" name="sort by" />&nbsp;attribute c:</th>
-		<th><input type="radio" name="sort by" />&nbsp;attribute d:</th>
+		<th><input type="radio" name="sort by" />&nbsp;attribute A</th>
+		<th><input type="radio" name="sort by" />&nbsp;attribute b</th>
+		<th><input type="radio" name="sort by" />&nbsp;attribute c</th>
+		<th><input type="radio" name="sort by" />&nbsp;attribute d</th>
 		</tr>
 		
 		<tr class="a">
