--- a/www/ui/milestone6x_screens/2-4-1_1.html
+++ b/www/ui/milestone6x_screens/2-4-1_1.html
@@ -33,9 +33,9 @@
 	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr>
-<td id="leftcol" nowrap="nowrap" width="20%">
+<table border="0" cellspacing="12" cellpadding="0" width="97%">
+ <tr valign="top">
+<td id="leftcol" width="20%">
 <!-- Structural Elements -->
 	
 	<!-- SourceCast -->
@@ -114,7 +114,7 @@
 	
 <!-- Structural Elements -->
 </td>
-<td id="bodycol">
+<td width="100%" id="bodycol">
 <!-- Structural Elements -->
 
 	<!-- Scarab - App -->
@@ -160,14 +160,14 @@
 		<div class="axial">
 			<table border="1" cellspacing="2" cellpadding="3">
 			<tr>
-			<th width="120">report name:</th>
+			<th width="120">report name</th>
 			<td>         
 			<input type="text" name="name" />		
 			</td>
 			</tr>
 			
 			<tr>
-			<th width="120">report description (optional):</th>
+			<th width="120">report description (optional)</th>
 			<td><textarea rows="3" cols="30"></textarea></td>
 			</tr>
 			</table>
@@ -182,7 +182,7 @@
 		
 			<table border="1" cellspacing="2" cellpadding="3">			
 			<tr>
-			<th width="120">type of report:</th>
+			<th width="120">type of report</th>
 			<td>         
 			<select>
 			<option>comparative analysis (single date/time)</option>		  
