--- a/www/ui/milestone8x_screens/2-0-0-1-3.html
+++ b/www/ui/milestone8x_screens/2-0-0-1-3.html
@@ -33,9 +33,9 @@
 	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr>
-<td id="leftcol" nowrap="nowrap" width="20%">
+<table border="0" cellspacing="12" cellpadding="0" width="97%">
+ <tr valign="top">
+<td id="leftcol" width="20%">
 <!-- Structural Elements -->
 	
 	<!-- SourceCast -->
@@ -114,7 +114,7 @@
 	
 <!-- Structural Elements -->
 </td>
-<td id="bodycol">
+<td width="100%" id="bodycol">
 <!-- Structural Elements -->
 
 	<!-- Scarab - App -->
@@ -152,17 +152,17 @@
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
 			<tr>
-			<th width="120">queue name:</th>
+			<th width="120">queue name</th>
 			<td><input type="text" size="25" value="" /></td>
 			</tr>
 			
 			<tr>
-			<th width="120">queue description:</th>
+			<th width="120">queue description</th>
 			<td><textarea rows="4" cols="40"></textarea></td>
 			</tr>
 			
 			<tr>
-			<th width="120">what project?:</th>
+			<th width="120">what project?</th>
 			<td>
 			<select>
 			<option>all</option>
@@ -179,7 +179,7 @@
 			</tr>
 			
 			<tr>
-			<th width="120">what attributes?:</th>
+			<th width="120">what attributes?</th>
 			<td><select multiple="multiple">
 			<option>all</option>
 			<option>issue ID #</option>
@@ -196,7 +196,7 @@
 			</tr>
 			
 			<tr>
-			<th width="120">what users?:</th>
+			<th width="120">what users?</th>
 			<td><select multiple="multiple">
 			<option>all</option>
 			<option>User X</option>
@@ -208,7 +208,7 @@
 			</tr>
 			
 			<tr>
-			<th width="120">date range:</th>
+			<th width="120">date range</th>
 			<td><select>
 			<option>past 10 days</option>
 			<option>past 5 days</option>
@@ -221,7 +221,7 @@
 			</tr>
 			
 			<tr>
-			<th width="120">number of issues per page (default=10):</th>
+			<th width="120">number of issues per page (default=10)</th>
 			<td><input type="text" size="2" value="" /></td>
 			</tr>
 			</table>
