--- a/www/ui/milestone8x_screens/3-6-0.html
+++ b/www/ui/milestone8x_screens/3-6-0.html
@@ -33,9 +33,9 @@
 	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr>
-<td id="leftcol" nowrap="nowrap" width="20%">
+<table border="0" cellspacing="12" cellpadding="0" width="97%">
+ <tr valign="top">
+<td id="leftcol" width="20%">
 <!-- Structural Elements -->
 	
 	<!-- SourceCast -->
@@ -114,7 +114,7 @@
 	
 <!-- Structural Elements -->
 </td>
-<td id="bodycol">
+<td width="100%" id="bodycol">
 <!-- Structural Elements -->
 
 	<!-- Scarab - App -->
@@ -150,15 +150,15 @@
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
 		<th nowrap="nowrap"><a href="#"><img src="../csi/images/icon_uparrow_off.gif" width="13" height="8" alt="sort ascending" border="0" /></a><img src="../csi/images/icon_downarrow_on.gif" width="13" height="8" alt="sort descending" border="0" /></th>
-		<th><a href="#" title="sort">date:</a></th>
-		<th><a href="#" title="sort">type:</a></th>
-		<th><a href="#" title="sort">submitted by:</a></th>
-		<th><a href="#" title="sort">project:</a></th>
-		<th><a href="#" title="sort">user role:</a></th>
-		<th><a href="#" title="sort">name:</a></th>
-		<th><a href="#" title="sort">description:</a></th>
-		<th>comments:</th>
-		<th>action:</th>
+		<th><a href="#" title="sort">date</a></th>
+		<th><a href="#" title="sort">type</a></th>
+		<th><a href="#" title="sort">submitted by</a></th>
+		<th><a href="#" title="sort">project</a></th>
+		<th><a href="#" title="sort">user role</a></th>
+		<th><a href="#" title="sort">name</a></th>
+		<th><a href="#" title="sort">description</a></th>
+		<th>comments</th>
+		<th>action</th>
 		</tr>
 		
 		<tr class="a">
