--- a/www/ui/milestone1x_screens/2-1-2.html
+++ b/www/ui/milestone1x_screens/2-1-2.html
@@ -33,9 +33,9 @@
 	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr>
-<td id="leftcol" nowrap="nowrap" width="20%">
+<table border="0" cellspacing="12" cellpadding="0" width="97%">
+ <tr valign="top">
+<td id="leftcol" width="20%">
 <!-- Structural Elements -->
 	
 	<!-- SourceCast -->
@@ -114,7 +114,7 @@
 	
 <!-- Structural Elements -->
 </td>
-<td id="bodycol">
+<td width="100%" id="bodycol">
 <!-- Structural Elements -->
 	
 	<!-- Scarab - App -->
@@ -160,7 +160,7 @@
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
 			<tr>
-			<th width="120">issue description:</th>
+			<th width="120">issue description</th>
 			<td><textarea rows="4" cols="40"></textarea></td>
 			</tr>
 			</table>
@@ -170,9 +170,9 @@
 		
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
-		<th>select:</th>
-		<th>url:</th>
-		<th>url description:</th>
+		<th>select</th>
+		<th>url</th>
+		<th>url description</th>
 		</tr>
 		
 		<tr class="a">
@@ -188,9 +188,9 @@
 	
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
-		<th>select:</th>
-		<th>file:</th>
-		<th>file description:</th>
+		<th>select</th>
+		<th>file</th>
+		<th>file description</th>
 		</tr>
 		
 		<tr class="a">
