--- a/www/ui/milestone1x_screens/2-6-2.html
+++ b/www/ui/milestone1x_screens/2-6-2.html
@@ -33,9 +33,9 @@
 	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr>
-<td id="leftcol" nowrap="nowrap" width="20%">
+<table border="0" cellspacing="12" cellpadding="0" width="97%">
+ <tr valign="top">
+<td id="leftcol" width="20%">
 <!-- Structural Elements -->
 	
 	<!-- SourceCast -->
@@ -114,7 +114,7 @@
 	
 <!-- Structural Elements -->
 </td>
-<td id="bodycol">
+<td width="100%" id="bodycol">
 <!-- Structural Elements -->
 	
 	<!-- Scarab - App -->
@@ -150,42 +150,42 @@
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
 			<tr>
-			<th width="120">issue id #:</th>
+			<th width="120">issue id #</th>
 			<td>120</td>
 			</tr>
 			
 			<tr>
-			<th width="120">version:</th>
+			<th width="120">version</th>
 			<td>345</td>
 			</tr>
 			
 			<tr>
-			<th width="120">platform:</th>
+			<th width="120">platform</th>
 			<td>commodore 64</td>
 			</tr>
 			
 			<tr>
-			<th width="120">os:</th>
+			<th width="120">os</th>
 			<td>plan9</td>
 			</tr>
 			
 			<tr>
-			<th width="120">found during:</th>
+			<th width="120">found during</th>
 			<td>normal use, QA, Beta, etc</td>
 			</tr>
 			
 			<tr>
-			<th width="120">issue type:</th>
+			<th width="120">issue type</th>
 			<td>e.g. change requirements / bug / enhancement</td>
 			</tr>
 			
 			<tr>
-			<th width="120">functional area:</th>
+			<th width="120">functional area</th>
 			<td>eg. UI / setup / help</td>
 			</tr>
 			
 			<tr>
-			<th width="120">severity:</th>
+			<th width="120">severity</th>
 			<td><select>
 			<option>
 			choice 1
@@ -200,7 +200,7 @@
 			</tr>
 			
 			<tr>
-			<th width="120">priority:</th>
+			<th width="120">priority</th>
 			<td><select>
 			<option>
 			choice 1
@@ -221,12 +221,12 @@
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
 			<tr>
-			<th width="120">committed by:</th>
+			<th width="120">committed by</th>
 			<td><a href="#">x (x@xxx.com)</a></td>
 			</tr>
 			
 			<tr>
-			<th width="120">assignee(s):</th>
+			<th width="120">assignee(s)</th>
 			<td>
 			<a href="#">x (x@xxx.com)</a>,&#160;<a href="#">y (y@xxx.com)</a> 
 			<p><input type="submit" value="edit assignees" /></p>
@@ -240,8 +240,8 @@
 		<table width="100%" cellpadding="3" cellspacing="2" border="1">
 		<tr>
 		<th nowrap="nowrap"><a href="#"><img src="../csi/images/icon_uparrow_off.gif" width="13" height="8" alt="sort ascending" border="0" /></a><img src="../csi/images/icon_downarrow_on.gif" width="13" height="8" alt="sort descending" border="0" /></th>
-		<th>URL:</th>
-		<th>description:</th>
+		<th>URL</th>
+		<th>description</th>
 		</tr>
 		
 		<tr class="a">
@@ -281,9 +281,9 @@
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
 		<th nowrap="nowrap"><a href="#"><img src="../csi/images/icon_uparrow_off.gif" width="13" height="8" alt="sort ascending" border="0" /></a><img src="../csi/images/icon_downarrow_on.gif" width="13" height="8" alt="sort descending" border="0" /></th>
-		<th>issue id#:</th>
-		<th>issue summary:</th>
-		<th>dependency type:</th>
+		<th>issue id#</th>
+		<th>issue summary</th>
+		<th>dependency type</th>
 		</tr>
 		
 		<tr class="a">
@@ -344,7 +344,7 @@
 			</tr>
 			
 			<tr>
-			<th width="120">add comment:</th>
+			<th width="120">add comment</th>
 			<td>
 			<textarea rows="4" cols="40"></textarea> 
 			<p><input type="submit" value="submit comment" /></p>
@@ -357,8 +357,8 @@
 		
 		<table width="100%" cellpadding="3" cellspacing="2" border="1">
 		<tr>
-		<th width="120">date stamp:</th>
-		<th>action:</th>
+		<th width="120">date stamp</th>
+		<th>action</th>
 		</tr>
 		
 		<tr class="a">
@@ -391,42 +391,42 @@
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
 			<tr>
-			<th width="120">issue id #:</th>
+			<th width="120">issue id #</th>
 			<td>121</td>
 			</tr>
 			
 			<tr>
-			<th width="120">version:</th>
+			<th width="120">version</th>
 			<td>345</td>
 			</tr>
 			
 			<tr>
-			<th width="120">platform:</th>
+			<th width="120">platform</th>
 			<td>commodore 64</td>
 			</tr>
 			
 			<tr>
-			<th width="120">os:</th>		
+			<th width="120">os</th>		
 			<td>plan9</td>
 			</tr>
 			
 			<tr>
-			<th width="120">found during:</th>		
+			<th width="120">found during</th>		
 			<td>normal use, QA, Beta, etc</td>
 			</tr>
 			
 			<tr>
-			<th width="120">issue type:</th>		
+			<th width="120">issue type</th>		
 			<td>e.g. change requirements / bug / enhancement</td>
 			</tr>
 			
 			<tr>
-			<th width="120">functional area:</th>		
+			<th width="120">functional area</th>		
 			<td>eg. UI / setup / help</td>
 			</tr>
 			
 			<tr>
-			<th width="120">severity:</th>		
+			<th width="120">severity</th>		
 			<td><select>
 			<option>
 			choice 1
@@ -441,7 +441,7 @@
 			</tr>
 			
 			<tr>
-			<th width="120">priority:</th>		
+			<th width="120">priority</th>		
 			<td><select>
 			<option>
 			choice 1
@@ -462,12 +462,12 @@
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
 			<tr>
-			<th width="120">committed by:</th>
+			<th width="120">committed by</th>
 			<td><a href="#">x (x@xxx.com)</a></td>
 			</tr>
 			
 			<tr>
-			<th width="120">assignee(s):</th>		
+			<th width="120">assignee(s)</th>		
 			<td>
 			<a href="#">x (x@xxx.com)</a>,&#160;<a href="#">y (y@xxx.com)</a>		
 			<p><input type="submit" value="edit assignees" /></p>
@@ -481,8 +481,8 @@
 		<table width="100%" cellpadding="3" cellspacing="2" border="1">
 		<tr>
 		<th nowrap="nowrap"><a href="#"><img src="../csi/images/icon_uparrow_off.gif" width="13" height="8" alt="sort ascending" border="0" /></a><img src="../csi/images/icon_downarrow_on.gif" width="13" height="8" alt="sort descending" border="0" /></th>
-		<th>URL:</th>		
-		<th>description:</th>
+		<th>URL</th>		
+		<th>description</th>
 		</tr>
 		
 		<tr class="a">
@@ -522,9 +522,9 @@
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
 		<th nowrap="nowrap"><a href="#"><img src="../csi/images/icon_uparrow_off.gif" width="13" height="8" alt="sort ascending" border="0" /></a><img src="../csi/images/icon_downarrow_on.gif" width="13" height="8" alt="sort descending" border="0" /></th>
-		<th>issue id#:</th>		
-		<th>issue summary:</th>		
-		<th>dependency type:</th>
+		<th>issue id#</th>		
+		<th>issue summary</th>		
+		<th>dependency type</th>
 		</tr>
 		
 		<tr class="a">
@@ -585,7 +585,7 @@
 			</tr>
 			
 			<tr>
-			<th width="120">add comment:</th>		
+			<th width="120">add comment</th>		
 			<td>
 			<textarea rows="4" cols="40"></textarea>		
 			<p><input type="submit" value="submit comment" /></p>
@@ -598,8 +598,8 @@
 		
 		<table width="100%" cellpadding="3" cellspacing="2" border="1">
 		<tr>
-		<th width="120">date stamp:</th>		
-		<th>action:</th>
+		<th width="120">date stamp</th>		
+		<th>action</th>
 		</tr>
 		
 		<tr class="a">
