--- a/www/ui/milestone1x_screens/3-0-2-0.html
+++ b/www/ui/milestone1x_screens/3-0-2-0.html
@@ -33,9 +33,9 @@
 	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr>
-<td id="leftcol" nowrap="nowrap" width="20%">
+<table border="0" cellspacing="12" cellpadding="0" width="97%">
+ <tr valign="top">
+<td id="leftcol" width="20%">
 <!-- Structural Elements -->
 	
 	<!-- SourceCast -->
@@ -114,7 +114,7 @@
 	
 <!-- Structural Elements -->
 </td>
-<td id="bodycol">
+<td width="100%" id="bodycol">
 <!-- Structural Elements -->
 	
 	<!-- Scarab - App -->
@@ -152,7 +152,7 @@
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
 			<tr>
-			<th width="120">input type:</th>		
+			<th width="120">input type</th>		
 			<td class="b"><select>
 			<option>
 			select
@@ -176,17 +176,17 @@
 			</tr>
 			
 			<tr>
-			<th width="120">attribute name:</th>		
+			<th width="120">attribute name</th>		
 			<td class="b"><input type="text" size="53" /></td>
 			</tr>
 			
 			<tr>
-			<th width="120">attribute description:</th>		
+			<th width="120">attribute description</th>		
 			<td class="b"><textarea rows="4" cols="40"></textarea></td>
 			</tr>
 			
 			<tr>
-			<th width="120">creation date:</th>		
+			<th width="120">creation date</th>		
 			<td class="b">3 may 2001</td>
 			</tr>
 			</table>
@@ -197,8 +197,8 @@
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
 		<th nowrap="nowrap">&#160;</th>		
-		<th>list option:</th>		
-		<th>sequence #:</th>
+		<th>list option</th>		
+		<th>sequence #</th>
 		</tr>
 		
 		<tr class="a">
