--- a/www/ui/milestone2x_screens/2-2-0.html
+++ b/www/ui/milestone2x_screens/2-2-0.html
@@ -33,9 +33,9 @@
 	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr>
-<td id="leftcol" nowrap="nowrap" width="20%">
+<table border="0" cellspacing="12" cellpadding="0" width="97%">
+ <tr valign="top">
+<td id="leftcol" width="20%">
 <!-- Structural Elements -->
 	
 	<!-- SourceCast -->
@@ -114,7 +114,7 @@
 	
 <!-- Structural Elements -->
 </td>
-<td id="bodycol">
+<td width="100%" id="bodycol">
 <!-- Structural Elements -->
 
 	<!-- Scarab - App -->
@@ -159,7 +159,7 @@
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
 			<tr>
-			<th width="120">saved queries:</th>	
+			<th width="120">saved queries</th>	
 			<td><select>
 			<option>
 			Saved query X
@@ -180,12 +180,12 @@
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
 			<tr>
-			<th width="120">issue ID# range:</th>
+			<th width="120">issue ID# range</th>
 			<td>from:&#160;<input type="text" size="20" value="" />&#160;&#160;to:&#160;<input type="text" size="20" value="" /></td>
 			</tr>
 			
 			<tr>
-			<th width="120">issue creation date range:</th>
+			<th width="120">issue creation date range</th>
          <td><dl><div>from:</div>
 
 <dd><select>
@@ -346,23 +346,23 @@
 </td>			</tr>
 			
 			<tr>
-			<th width="120">votes:</th>
+			<th width="120">votes</th>
 			<td><input type="text" size="25" value="" /></td>
 			</tr>
 			
 			<tr>
-			<th width="120">summary:</th>
+			<th width="120">summary</th>
 			<td><input type="text" size="25" value="" /></td>
 			</tr>
 			
 			<tr>
-			<th width="120">description:</th>
+			<th width="120">description</th>
 			<td><textarea rows="4" cols="40">
 			</textarea></td>
 			</tr>
 			
 			<tr>
-			<th width="120">version:</th>
+			<th width="120">version</th>
 			<td><select>
 			<option>
 			choice 1
@@ -377,7 +377,7 @@
 			</tr>
 			
 			<tr>
-			<th width="120">platform:</th>
+			<th width="120">platform</th>
 			<td><select>
 			<option>
 			choice 1
@@ -392,7 +392,7 @@
 			</tr>
 			
 			<tr>
-			<th width="120">os:</th>
+			<th width="120">os</th>
 			<td><select>
 			<option>
 			choice 1
@@ -407,7 +407,7 @@
 			</tr>
 			
 			<tr>
-			<th width="120">found during:</th>
+			<th width="120">found during</th>
 			<td><select>
 			<option>
 			normal use
@@ -431,7 +431,7 @@
 			</tr>
 			
 			<tr>
-			<th width="120">issue type:</th>
+			<th width="120">issue type</th>
 			<td><select>
 			<option>
 			change requirements
@@ -458,12 +458,12 @@
 			</tr>
 			
 			<tr>
-			<th width="120">functional area:</th>
+			<th width="120">functional area</th>
 			<td><input type="checkbox" /> UI <input type="checkbox" />setup <input type="checkbox" />help</td>
 			</tr>
 			
 			<tr>
-			<th width="120">severity:</th>
+			<th width="120">severity</th>
 			<td><select>
 			<option>
 			choice 1
@@ -478,7 +478,7 @@
 			</tr>
 			
 			<tr>
-			<th width="120">priority:</th>
+			<th width="120">priority</th>
 			<td><select>
 			<option>
 			choice 1
@@ -493,7 +493,7 @@
 			</tr>
 			
 			<tr>
-			<th width="120">URL:</th>
+			<th width="120">URL</th>
 			<td><input type="text" size="25" value="http://" /></td>
 			</tr>
 			</table>
@@ -505,7 +505,7 @@
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
 			<tr>
-			<th width="120">committed by:</th>
+			<th width="120">committed by</th>
 			<td><select multiple="multiple">
 			<option>role X</option>
 			<option>role Y</option>
@@ -518,7 +518,7 @@
 			
 			<tr>
 
-			<th width="120">assignee(s):</th>
+			<th width="120">assignee(s)</th>
 			<td><select multiple="multiple">
 			<option>role X</option>
 			<option>role Y</option>
@@ -596,7 +596,7 @@
         </tr>  
         
         <tr>
-         <th width="120">date range:</th>
+         <th width="120">date range</th>
 
          <td><dl><div>from:</div>
 
@@ -765,7 +765,7 @@
 		<div class="axial">
 			<table width="100%" cellpadding="3" cellspacing="2" border="1">
 			<tr>
-			<th width="120">sort by:</th>
+			<th width="120">sort by</th>
 			<td><select>
 			<option>
 			attriute X
@@ -786,7 +786,7 @@
 			</select></td>
 			</tr>
 			<tr>
-			<th width="120">issues per page:</th>
+			<th width="120">issues per page</th>
 			<td><input type="radio" name="foo" /> 25 <input type="radio" name="foo" /> 50 <input type="radio" name="foo" /> 75 <input type="radio" name="foo" /> 100</td>
 			</tr>
 			</table>
