--- a/www/ui/milestone3x_screens/2-7-0_step2.html
+++ b/www/ui/milestone3x_screens/2-7-0_step2.html
@@ -33,9 +33,9 @@
 	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr>
-<td id="leftcol" nowrap="nowrap" width="20%">
+<table border="0" cellspacing="12" cellpadding="0" width="97%">
+ <tr valign="top">
+<td id="leftcol" width="20%">
 <!-- Structural Elements -->
 	
 	<!-- SourceCast -->
@@ -114,7 +114,7 @@
 	
 <!-- Structural Elements -->
 </td>
-<td id="bodycol">
+<td width="100%" id="bodycol">
 <!-- Structural Elements -->
 
 	<!-- Scarab - App -->
@@ -149,9 +149,9 @@
 		
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
-		<th><a href="#" title="sort">issue summary:</a></th>
-		<th><a href="#" title="sort">date committed:</a></th>
-		<th><a href="#" title="sort">committed by:</a></th>
+		<th><a href="#" title="sort">issue summary</a></th>
+		<th><a href="#" title="sort">date committed</a></th>
+		<th><a href="#" title="sort">committed by</a></th>
 		</tr>
 		
 		<tr class="a">
