--- a/www/ui/milestone5x_screens/2-5-1.html
+++ b/www/ui/milestone5x_screens/2-5-1.html
@@ -33,9 +33,9 @@
 	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr>
-<td id="leftcol" nowrap="nowrap" width="20%">
+<table border="0" cellspacing="12" cellpadding="0" width="97%">
+ <tr valign="top">
+<td id="leftcol" width="20%">
 <!-- Structural Elements -->
 	
 	<!-- SourceCast -->
@@ -114,7 +114,7 @@
 	
 <!-- Structural Elements -->
 </td>
-<td id="bodycol">
+<td width="100%" id="bodycol">
 <!-- Structural Elements -->
 
 	<!-- Scarab - App -->
@@ -201,7 +201,7 @@
 			</select></td>
 			</tr>
 			<tr>
-			<th width="120">author:</th>
+			<th width="120">author</th>
 			<td>Joe Smo <a href="#">joes@users.com</a></td>
 			</tr>
 			</table>
