--- a/www/ui/milestone6x_screens/2-4-1_step3.html
+++ b/www/ui/milestone6x_screens/2-4-1_step3.html
@@ -33,9 +33,9 @@
 	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
-<table border="0" cellspacing="0" cellpadding="0" width="100%">
-<tr>
-<td id="leftcol" nowrap="nowrap" width="20%">
+<table border="0" cellspacing="12" cellpadding="0" width="97%">
+ <tr valign="top">
+<td id="leftcol" width="20%">
 <!-- Structural Elements -->
 	
 	<!-- SourceCast -->
@@ -114,7 +114,7 @@
 	
 <!-- Structural Elements -->
 </td>
-<td id="bodycol">
+<td width="100%" id="bodycol">
 <!-- Structural Elements -->
 
 	<!-- Scarab - App -->
@@ -160,10 +160,10 @@
 		<table width="100%" border="1" cellspacing="2" cellpadding="3">
 		<tr>
 		<th>&nbsp;</th>
-		<th>p1 open:</th>
-		<th>p1 closed:</th>
-		<th>P2 open:</th>
-		<th>P2 closed:</th>
+		<th>p1 open</th>
+		<th>p1 closed</th>
+		<th>P2 open</th>
+		<th>P2 closed</th>
 		</tr>
 		
 		<tr class="a">
