added the start of a document which documents the process of duplicate checking

--- a/www/project_docs.html
+++ b/www/project_docs.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_docs.html,v 1.14 2001/10/06 01:11:46 jon Exp $ -->
+<!-- $Id: project_docs.html,v 1.15 2001/10/10 21:12:14 jon Exp $ -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 
@@ -22,6 +22,7 @@
                 <li><a href="project_status.html">Project Status</a></li>
                 <li><a href="scarab-design.html">Design Documentation</a></li>
                 <li><a href="attributes.html">Attribute Documentation</a></li>
+                <li><a href="duplicate.html">Duplicate Checking Documentation</a></li>
                 <li><a href="/nonav/ui/">UI Mockups</a></li>
                 <li><a href="scarabfeaturematrix.html">Feature Matrix</a></li>
                 <li><a href="scarab-schema.html">Database schema image</a></li>
