--- a/www/ui/milestone1x_screens/2-1-0.html
+++ b/www/ui/milestone1x_screens/2-1-0.html
@@ -7,6 +7,14 @@
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
+<style type="text/css">
+/* <![CDATA[ */
+#topmodule { margin-top: 0; }
+
+#bodycol { padding-top: 0; }
+
+/* ]]> */
+</style>
 </head>
 
 <body>
@@ -33,7 +41,7 @@
 	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
-<table border="0" cellspacing="12" cellpadding="0" width="97%">
+<table border="0" cellspacing="0" cellpadding="8" width="97%" id="main">
  <tr valign="top">
 <td id="leftcol" width="20%">
 <!-- Structural Elements -->
