--- a/www/ui/milestone1x_screens/2-1-0.html
+++ b/www/ui/milestone1x_screens/2-1-0.html
@@ -1,3 +1,5 @@
+<!DOCTYPE html PUBLIC "-//CollabNet//DTD XHTML 1.0 Transitional//EN"
+"http://collabnet.com/dtds/collabnet_transitional_10.dtd">
 <html>
 
 <head>
@@ -7,9 +9,9 @@
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
 <style type="text/css">
 /* <![CDATA[ */
-#topmodule { margin-top: 0; }
+#topmodule { margin-top: -8px; }
 
-#bodycol { padding-top: 0; }
+/* #bodycol { padding-top: 0; } */
 
 /* ]]> */
 </style>
@@ -39,7 +41,7 @@
 	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
-<table border="0" cellspacing="0" cellpadding="8" width="97%" id="main">
+<table border="0" cellspacing="0" cellpadding="8" width="97%" id="">
  <tr valign="top">
 <td id="leftcol" width="20%">
 <!-- Structural Elements -->
