--- a/www/ui/milestone1x_screens/2-1-0.html
+++ b/www/ui/milestone1x_screens/2-1-0.html
@@ -7,14 +7,6 @@
 	<link rel="stylesheet" type="text/css" href="../csi/style/main.css" media="screen" />
 	<link rel="stylesheet" type="text/css" href="../csi/style/print.css" media="print" />
 	<link rel="alternate stylesheet" title="compact" type="text/css" href="../csi/style/compact.css" />
-<style type="text/css">
-/* <![CDATA[ */
-#topmodule { margin-top: -8px; }
-
-/* #bodycol { padding-top: 0; } */
-
-/* ]]> */
-</style>
 </head>
 
 <body>
@@ -41,7 +33,7 @@
 	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
-<table border="0" cellspacing="0" cellpadding="8" width="97%" id="">
+<table border="0" cellspacing="0" cellpadding="8" width="97%" id="main">
  <tr valign="top">
 <td id="leftcol" width="20%">
 <!-- Structural Elements -->
