--- a/www/ui/milestone1x_screens/2-1-4-0.html
+++ b/www/ui/milestone1x_screens/2-1-4-0.html
@@ -33,7 +33,7 @@
     <!-- SourceCast -->
     
     <!-- Structural Elements -->
-<table border="0" cellspacing="12" cellpadding="0" width="97%">
+<table border="0" cellspacing="0" cellpadding="8" width="98%" id="main">
  <tr valign="top">
 <td id="leftcol" width="20%">
 <!-- Structural Elements -->
