--- a/www/ui/milestone1x_screens/2-0-0.html
+++ b/www/ui/milestone1x_screens/2-0-0.html
@@ -33,7 +33,7 @@
 	<!-- SourceCast -->
 	
 	<!-- Structural Elements -->
-<table border="0" cellspacing="0" cellpadding="8" width="97%" id="main">
+<table border="0" cellspacing="0" cellpadding="0" width="100%">
 <tr>
 <td id="leftcol" nowrap="nowrap" width="20%">
 <!-- Structural Elements -->
