--- a/www/ui/milestone1x_screens/2-1-4.html
+++ b/www/ui/milestone1x_screens/2-1-4.html
@@ -109,8 +109,8 @@
     <div id="topmodule">
         <table border="0" cellspacing="0" cellpadding="3" width="100%">
         <tr>
-            <td nowrap="nowrap">
-            <select>
+            <th nowrap="nowrap">
+            Artifact type X:</th><td><select>
             <option>saved queries</option>
             <option>query one</option>
             <option>query two</option>
@@ -161,8 +161,8 @@
         <th nowrap="nowrap">select</th>
         <th>Artifact type name</th>
         <th>(in)active</th>
+        <th>Show in left hand nav*</th>
         <th>sequence #</th>
-        <th>parent</th>        
         </tr>
 
         
@@ -170,15 +170,10 @@
         <td><input type="checkbox" /></td>
         <td><a href="#">Artifact V</a></td>
         <td><input type="checkbox" checked="checked" /></td>
+        <td><input type="checkbox" /></td>
         <td>
         <select class="select">
         <option>1</option>
-        </select>
-        </td>
-        <td>
-        <select class="select">
-        <option>-</option>
-		<option>Artifact X</option>
         </select>
         </td>
         </tr>        
@@ -187,15 +182,10 @@
         <td><input type="checkbox" /></td>
         <td><a href="#">Artifact W</a></td>
         <td><input type="checkbox" checked="checked" /></td>
+        <td><input type="checkbox" /></td>
         <td>
         <select class="select">
-        <option>1</option>
-        </select>
-        </td>
-        <td>
-        <select class="select">
-        <option>-</option>
-		<option>Artifact X</option>
+        <option>2</option>
         </select>
         </td>
         </tr>
@@ -204,16 +194,10 @@
         <td><input type="checkbox" /></td>
         <td><a href="#">Artifact X</a></td>
         <td><input type="checkbox" checked="checked" /></td>
+        <td><input type="checkbox" /></td>
         <td>
         <select class="select">
-        <option>2</option>
-        </select>
-        </td>
-        <td>
-        <select class="select">
-        <option>-</option>
-		<option>Artifact X</option>
-
+        <option>3</option>
         </select>
         </td>
         </tr>
@@ -223,14 +207,10 @@
         <td><input type="checkbox" /></td>
         <td><a href="#">Artifact X.1</a></td>
         <td><input type="checkbox" checked="checked" /></td>
+        <td><input type="checkbox" /></td>
         <td>
         <select class="select">
-        <option>1</option>
-        </select>
-        </td>
-        <td>
-        <select class="select">
-        <option>Artifact X</option>
+        <option>4</option>
         </select>
         </td>
         </tr>        
@@ -240,14 +220,10 @@
         <td><input type="checkbox" /></td>
         <td><a href="#">Artifact X.2</a></td>
         <td><input type="checkbox" checked="checked" /></td>
+        <td><input type="checkbox" /></td>
         <td>
         <select class="select">
-        <option>2</option>
-        </select>
-        </td>
-        <td>
-        <select class="select">
-        <option>Artifact X</option>
+        <option>5</option>
         </select>
         </td>
         </tr>
@@ -257,18 +233,11 @@
         <td><input type="checkbox" /></td>
         <td><a href="#">Artifact Y</a></td>
         <td><input type="checkbox" checked="checked" /></td>
+        <td><input type="checkbox" /></td>
         <td>
         <select class="select">
-        <option>3</option>
+        <option>6</option>
         </select>
-        </td>
-        <td>
-        <select class="select">
-        <option>-</option>
-		<option>Artifact X</option>
-        </select>
-        </td>
-        </tr>        
         </td>
         </tr>       
 
@@ -276,15 +245,10 @@
         <td><input type="checkbox" /></td>
         <td><a href="#">Artifact Z</a></td>
         <td><input type="checkbox" checked="checked" /></td>
+        <td><input type="checkbox" /></td>
         <td>
         <select class="select">
-        <option>4</option>
-        </select>
-        </td>
-        <td>
-        <select class="select">
-        <option>-</option>
-		<option>Artifact X</option>
+        <option>7</option>
         </select>
         </td>
         </tr>
@@ -309,6 +273,8 @@
             </tr>
             </table>
         </div>       
+<p>* Maximum of four Artifact types in left hand navigation (first four selected will appear).</p>
+
 
     <!-- Scarab - App -->
 
