--- a/www/ui/milestone1x_screens/2-1-4.html
+++ b/www/ui/milestone1x_screens/2-1-4.html
@@ -109,12 +109,23 @@
     <div id="topmodule">
         <table border="0" cellspacing="0" cellpadding="3" width="100%">
         <tr>
-            <th nowrap="nowrap">
-            Artifact type X:</th><td><select>
+            <td><select>
             <option>saved queries</option>
-            <option>query one</option>
-            <option>query two</option>
-            </select> 
+            <option>Artifact type 1</option>
+            <option>&nbsp;&nbsp;query one</option>
+            <option>&nbsp;&nbsp;query two</option>
+            <option>------------------</option>
+            <option>Artifact type 2</option>
+            <option>&nbsp;&nbsp;query one</option>
+            <option>&nbsp;&nbsp;query two</option>
+            <option>&nbsp;&nbsp;query three</option>
+            <option>&nbsp;&nbsp;query four</option>
+             <option>------------------</option>
+            <option>Artifact type 3</option>
+            <option>&nbsp;&nbsp;query one</option>
+            <option>&nbsp;&nbsp;query two</option>
+            <option>&nbsp;&nbsp;query three</option>
+           </select> 
             <input type="submit" name="query" value="Go" />
             &nbsp;<img src="../csi/images/seperator2.gif" width="2" height="15" alt="" border="0" />&nbsp;
             <input type="text" size="15" name="" />
