nightly builds latest status Issue number: Obtained from: Submitted by: Reviewed by:

--- a/www/project_docs.html
+++ b/www/project_docs.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_docs.html,v 1.15 2001/10/10 21:12:14 jon Exp $ -->
+<!-- $Id: project_docs.html,v 1.16 2001/10/13 12:21:25 jon Exp $ -->
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 
@@ -31,9 +31,10 @@
                 <li><a href="security_considerations.html">Security considerations</a></li>
             </ul>
 
-            <h3>Nightly Live Builds</h3>
+            <h3>Nightly Tasks</h3>
             <ul>
                 <li><a href="http://scarab.whichever.com/">Runbox</a> (may be temporarily unavailable)</li>
+                <li><a href="http://www.apache.org/~jon/scarab/nightly/">Nightly CVS HEAD snapshots</a></li>
             </ul>
 
             <h3>Standard Specifications:</h3>
