--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.27 2001/10/08 22:31:16 jon Exp $ -->
+<!-- $Id: project_status.html,v 1.28 2001/10/13 12:21:25 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -20,13 +20,20 @@
 </p>
 
 <p align="center">
-Last Updated: $Date: 2001/10/08 22:31:16 $
+Last Updated: $Date: 2001/10/13 12:21:25 $
 </p>
 
 <h3><i>Tentative</i> Roadmap</h3>
 
 <p>
-Project 1.0 Alpha 1 Release Date: 10/15
+Scarab 1.0dr1* Release Date: 10/15
+</p>
+
+<p>
+* "dr" stands for Developer Release which means that it is still under
+heavy development and is not considered ready for use on live servers.
+We expect to have weekly dr releases until we get to either alpha or
+beta releases.
 </p>
 
 <p>
@@ -38,7 +45,7 @@ middle of October.
 </p>
 
 <p>
-There is a <a href="http://scarab.whichever.com">Runbox</a> where you
+There is a <a href="http://scarab.whichever.com/">Runbox</a> where you
 can look at an actual instance of Scarab running on a machine. This is a
 nightly build and run of the latest version of Scarab from CVS. Any data
 in the database will get replaced the next rebuild. Note: If it shows an
@@ -56,14 +63,12 @@ up to date reflection of the current project status.
 
 <ul>
 <li>
-    10-8-01 - Brain dump: Still coding like mad. A proposal has gone out
-    regarding Artifact Types. We are going to try to make this into the
-    alpha release. Got the i18n stuff in place and tested. John and
-    Elicia are working on templates. Still need to work through the code
-    and fix a lot of the FIXME's. Need to come up with a scheme for
-    dealing with tracking post data after login as well as come up with
-    a chain of screen tracking. Susan is working on updating the UI's to
-    the latest CSS. Other than that, we are looking pretty good.
+    10-13-01 - A lot of work on the UI front end has been made and the
+    app looks better than ever. We have also put a bunch of effort into
+    getting the concept of Artifact Types into the first release.
+    Reports are almost done as well. We have documented the <a
+    href="duplicate.html">duplicate checking</a> process. Monday Oct
+    15th is looming.
 </li>
 </ul>
 
