these things are no longer future tense.

--- a/www/project_development_tools_and_technology.html
+++ b/www/project_development_tools_and_technology.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_development_tools_and_technology.html,v 1.3 2001/05/27 19:45:16 jon Exp $ -->
+<!-- $Id: project_development_tools_and_technology.html,v 1.4 2001/10/13 12:25:38 jon Exp $ -->
 <html>
 <head>
 <title>Scarab: Development Tools and Technologies</title>
@@ -8,30 +8,34 @@
 <body bgcolor="#F0F0F0">
 <table border=0 cellpadding=2 width="98%" bgcolor="#FFFFFF" >
     <tr> 
-        <td width="100%" bgcolor="#CCCC99"><b><font face="Arial, Helvetica, sans-serif" color="#000033">Development 
-            Tools and Technologies...</font></b></td>
+        <td width="100%" bgcolor="#CCCC99"><b>
+        <font face="Arial, Helvetica, sans-serif" color="#000033">Development 
+            Tools and Technologies...</font></b>
+        </td>
     </tr>
 </table>
+
 <p>
 Here is a list of technologies that are currently slated to be used
 within the project.
 </p>
+
 <ul>
-    <li><a href="http://jakarta.apache.org/turbine/">Turbine</a> will be used as the 
-        underlying framework</li>
+    <li><a href="http://jakarta.apache.org/turbine/">Turbine</a> is the 
+        underlying web app framework</li>
     <li><a href="http://jakarta.apache.org/turbine/howto/peers-howto.html">Peer model</a> and 
         <a href="http://jakarta.apache.org/turbine/howto/torque-howto.html">Torque</a> within Turbine 
-        will provide the database abstraction</li>
-    <li><a href="http://jakarta.apache.org/velocity/">Velocity</a> will
-    be used as the abstraction between the user interface and the
-    business logic. The look and feel of this application easily
+        provide the database abstraction</li>
+    <li><a href="http://jakarta.apache.org/velocity/">Velocity</a> is
+    used as the abstraction between the user interface and the
+    business logic (ie: the View). The look and feel of this application easily
     customizable.</li>
-    <li><a href="http://www.mysql.com">MySQL</a> will be the SQL backend
+    <li><a href="http://www.mysql.com">MySQL</a> is the SQL backend
     (Support for other RDBM's will also be included. We are just
     developing with MySQL for now because it is a commonly used
     database.)</li>
-    <li><a href="http://jakarta.apache.org/">Tomcat</a> 
-        will be the target Java Servlet engine (Any Servlet API 2.1 or higher
+    <li><a href="http://jakarta.apache.org/tomcat/">Tomcat 4.0</a> 
+        is the target Java Servlet engine (Any Servlet API 2.1 or higher
         engine will work).</li>
 </ul>
 
