missed a couple Issue number: Obtained from: Submitted by: Reviewed by:

--- a/www/project_development_tools_and_technology.html
+++ b/www/project_development_tools_and_technology.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_development_tools_and_technology.html,v 1.4 2001/10/13 12:25:38 jon Exp $ -->
+<!-- $Id: project_development_tools_and_technology.html,v 1.5 2001/10/13 12:26:31 jon Exp $ -->
 <html>
 <head>
 <title>Scarab: Development Tools and Technologies</title>
@@ -9,15 +9,14 @@
 <table border=0 cellpadding=2 width="98%" bgcolor="#FFFFFF" >
     <tr> 
         <td width="100%" bgcolor="#CCCC99"><b>
-        <font face="Arial, Helvetica, sans-serif" color="#000033">Development 
+        <font face="Arial, Helvetica, sans-serif" color="#000033">Scarab Development 
             Tools and Technologies...</font></b>
         </td>
     </tr>
 </table>
 
 <p>
-Here is a list of technologies that are currently slated to be used
-within the project.
+Here is a list of technologies that are used within the Scarab project:
 </p>
 
 <ul>
