--- a/www/project_status.html
+++ b/www/project_status.html
@@ -1,4 +1,4 @@
-<!-- $Id: project_status.html,v 1.28 2001/10/13 12:21:25 jon Exp $ -->
+<!-- $Id: project_status.html,v 1.29 2001/10/16 08:09:00 jon Exp $ -->
 <!doctype html public "-//w3c//dtd html 4.0 transitional//en">
 <html>
 <head>
@@ -20,13 +20,13 @@
 </p>
 
 <p align="center">
-Last Updated: $Date: 2001/10/13 12:21:25 $
+Last Updated: $Date: 2001/10/16 08:09:00 $
 </p>
 
 <h3><i>Tentative</i> Roadmap</h3>
 
 <p>
-Scarab 1.0dr1* Release Date: 10/15
+Scarab 1.0dr1* Release Date: 10/17
 </p>
 
 <p>
@@ -41,7 +41,7 @@ beta releases.
 to what and their dates of completion are now tracked on another page.
 Note: the finish date says 12/3. Thanks to the magic of M$ Project, this
 isn't accurate. We are shooting for a decently usable system around the
-middle of October.
+middle of November.
 </p>
 
 <p>
@@ -63,12 +63,14 @@ up to date reflection of the current project status.
 
 <ul>
 <li>
-    10-13-01 - A lot of work on the UI front end has been made and the
-    app looks better than ever. We have also put a bunch of effort into
-    getting the concept of Artifact Types into the first release.
-    Reports are almost done as well. We have documented the <a
-    href="duplicate.html">duplicate checking</a> process. Monday Oct
-    15th is looming.
+    10-15-01 - We are going to be behind on the 1.0dr1 release a day or
+    so...we gave it out best shot to make it on Monday, but reality is
+    that adding the artifact type stuff has taken a bit longer to get
+    implemented than we estimated...not only has it meant some fairly
+    large changes to the database and code, but we also have to provide
+    about 5-6 screens worth of admin editors on some fairly complex
+    business logic. I just don't want to release with this stuff being
+    not completely implemented and the logic not fully tested.
 </li>
 </ul>
 
